syntax = "proto3";

package temporal.server.chasm.lib.scheduler.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/scheduler/gen/schedulerpb;schedulerpb";

import "temporal/api/workflowservice/v1/request_response.proto";

message CreateScheduleRequest {
    temporal.api.workflowservice.v1.CreateScheduleRequest request = 1;

    // Internal namespace ID (UUID).
    string namespace_id = 2;
}

message CreateScheduleResponse {
    temporal.api.workflowservice.v1.CreateScheduleResponse response = 1;
}

message UpdateScheduleRequest {
    temporal.api.workflowservice.v1.UpdateScheduleRequest request = 1;

    // Internal namespace ID (UUID).
    string namespace_id = 2;
}

message UpdateScheduleResponse {
    temporal.api.workflowservice.v1.UpdateScheduleResponse response = 1;
}

message PatchScheduleRequest {
    temporal.api.workflowservice.v1.PatchScheduleRequest request = 1;

    // Internal namespace ID (UUID).
    string namespace_id = 2;
}

message PatchScheduleResponse {
    temporal.api.workflowservice.v1.PatchScheduleResponse response = 1;
}

message DeleteScheduleRequest {
    temporal.api.workflowservice.v1.DeleteScheduleRequest request = 1;

    // Internal namespace ID (UUID).
    string namespace_id = 2;
}

message DeleteScheduleResponse {
    temporal.api.workflowservice.v1.DeleteScheduleResponse response = 1;
}

message DescribeScheduleRequest {
    temporal.api.workflowservice.v1.DescribeScheduleRequest request = 1;

    // Internal namespace ID (UUID).
    string namespace_id = 2;
}

message DescribeScheduleResponse {
    temporal.api.workflowservice.v1.DescribeScheduleResponse response = 1;
}
